changed url for sharing

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 		<script>
 		$("#share").jsSocials({
 			shares: ["email", "twitter", "facebook", "linkedin"],
-			url: "http://bdadam.xyz/eduviz-noreact/",
+			url: "https://thecuriousoutlier.github.io/",
 			text: "Explore Data about the Illinois Public School System: View stats about certain school districts, or see how money and funding is handled in each one.",
 			showLabel: false,
 			showCount: false,
