fixed sharing issues, and added a new img that is used for sharing

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 		<title>IL Education Visualization</title>
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.0.2/leaflet.css">
 		<link rel="stylesheet" href="style.css">
-		<meta name="description" content="Find out interesting facts and see how the state of Illinois spends money on its public school system.">
+		<meta name="description" content="Explore Data about the Illinois Public School System: Visualize data that is collected by the Illinois State Board of Education and see how the data varies across geographic area.">
 		<meta name="viewport" content="width=device-width">
 		<link rel="stylesheet" href="style.css">
 		<link rel="shortcut icon" type="image/png" href="assets/favicon.png">
-		<meta property="og:title" content="Find out interesting facts and see how the state of Illinois spends money on its public school system.">
+		<meta property="og:title" content="Find out interesting facts, and see how the state of Illinois spends money on its public school system.">
 		<meta property="og:image" content="http://bdadam.xyz/northerly/static/images/northerly-brand@2x.png">
 		<link rel="stylesheet" type="text/css" href="dist/font-awesome/css/font-awesome.css" />
     <link rel="stylesheet" type="text/css" href="dist/jssocials.css" />
@@ -96,7 +96,9 @@
 		$("#share").jsSocials({
 			shares: ["email", "twitter", "facebook", "linkedin"],
 			url: "https://thecuriousoutlier.github.io/",
-			text: "Explore Data about the Illinois Public School System: View stats about certain school districts, or see how money and funding is handled in each one.",
+			hashtags: "#IllinoisEducViz",
+			text: "Explore Data about the Illinois Public School System: Visualize data that is collected by the Illinois State Board of Education and see how the data varies across geographic area.",
+			logo: "assets/shareImg.jpg",
 			showLabel: false,
 			showCount: false,
 			shareIn: "blank",
