fixed head desc

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 		<link rel="stylesheet" href="style.css">
 		<link rel="shortcut icon" type="image/png" href="assets/favicon.png">
 		<meta property="og:title" content="Find out interesting facts, and see how the state of Illinois spends money on its public school system.">
+		<meta name="og:description" content="Explore Data about the Illinois Public School System: Visualize data that is collected by the Illinois State Board of Education and see how the data varies across geographic area.">
+		<meta name="viewport" content="width=device-width">
 		<meta property="og:image" content="http://bdadam.xyz/northerly/static/images/northerly-brand@2x.png">
 		<link rel="stylesheet" type="text/css" href="dist/font-awesome/css/font-awesome.css" />
     <link rel="stylesheet" type="text/css" href="dist/jssocials.css" />
