more social stuff

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 			hashtags: "#IllinoisEducViz",
 			text: "Explore Data about the Illinois Public School System: Visualize data that is collected by the Illinois State Board of Education and see how the data varies across geographic area.",
 			logo: "assets/shareImg.jpg",
-			showLabel: false,
+			showLabel: true,
 			showCount: false,
 			shareIn: "blank",
 			on: {
