--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
 		<meta property="og:title" content="Find out interesting facts, and see how the state of Illinois spends money on its public school system.">
 		<meta name="og:description" content="Explore Data about the Illinois Public School System: Visualize data that is collected by the Illinois State Board of Education and see how the data varies across geographic area.">
 		<meta name="viewport" content="width=device-width">
-		<meta property="og:image" content="http://bdadam.xyz/northerly/static/images/northerly-brand@2x.png">
+		<meta property="og:image" content="http://thecuriousoutlier.com/assets/shareImg.jpg">
 		<link rel="stylesheet" type="text/css" href="dist/font-awesome/css/font-awesome.css" />
     <link rel="stylesheet" type="text/css" href="dist/jssocials.css" />
     <link rel="stylesheet" type="text/css" href="dist/jssocials-theme-plain.css" />
+		<meta name="keywords" content="education funding, public school funding, illinois public school, illinois education visualization, illinois public school funding visualization, vizualization, data visualization, curious outlier, the curious outlier">
 	</head>
 	<body>
 		<div class="welcome">
