still trying to get the share image to work

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<meta property="og:title" content="Find out interesting facts, and see how the state of Illinois spends money on its public school system.">
 		<meta name="og:description" content="Explore Data about the Illinois Public School System: Visualize data that is collected by the Illinois State Board of Education and see how the data varies across geographic area.">
 		<meta name="viewport" content="width=device-width">
-		<meta property="og:image" content="assets/shareImg.png">
+		<meta property="og:image" content="http://thecuriousoutlier.com/assets/shareImg.png">
 		<link rel="stylesheet" type="text/css" href="dist/font-awesome/css/font-awesome.css" />
     <link rel="stylesheet" type="text/css" href="dist/jssocials.css" />
     <link rel="stylesheet" type="text/css" href="dist/jssocials-theme-plain.css" />
