--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 			url: "https://thecuriousoutlier.github.io/",
 			hashtags: "#IllinoisEducViz",
 			text: "Explore Data about the Illinois Public School System: Visualize data that is collected by the Illinois State Board of Education and see how the data varies across geographic area.",
-			logo: "assets/shareImg.png",
+			logo: "http://thecuriousoutlier.com/assets/share@2x.png",
 			showLabel: false,
 			showCount: false,
 			shareIn: "blank",
