--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		<meta name="og:description" content="Explore Data about the Illinois Public School System: Visualize data that is collected by the Illinois State Board of Education and see how the data varies across geographic area.">
 		<meta name="viewport" content="width=device-width">
 		<meta property="og:image" content="http://thecuriousoutlier.com/assets/share@2x.png">
+		<link rel="image_src" type="image/jpeg"  href="http://thecuriousoutlier.com/assets/share@2x.png" />
 		<link rel="stylesheet" type="text/css" href="dist/font-awesome/css/font-awesome.css" />
     <link rel="stylesheet" type="text/css" href="dist/jssocials.css" />
     <link rel="stylesheet" type="text/css" href="dist/jssocials-theme-plain.css" />
