changed share links

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 		<script>
 		$("#share").jsSocials({
 			shares: ["email", "twitter", "facebook", "linkedin"],
-			url: "https://thecuriousoutlier.github.io/",
+			url: "http://thecuriousoutlier.com/",
 			hashtags: "#IllinoisEducViz",
 			text: "Explore Data about the Illinois Public School System: Visualize data that is collected by the Illinois State Board of Education and see how the data varies across geographic area.",
 			logo: "http://thecuriousoutlier.com/assets/share@2x.png",
